[gd_scene load_steps=2 format=3 uid="uid://dqgushwusic5x"]

[ext_resource type="Script" uid="uid://b7nrnvw7m573u" path="res://scripts/ui/game_over.gd" id="1_60xr3"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60xr3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.0392157, 0.0392157, 0.780392)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
uppercase = true

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="HighScoreContainer" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HighScoreMessage" type="Label" parent="VBoxContainer/HighScoreContainer"]
layout_mode = 2
text = "ðŸŽ‰ NEW HIGH SCORE! ðŸŽ‰"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="NamePrompt" type="Label" parent="VBoxContainer/HighScoreContainer"]
layout_mode = 2
text = "Enter your name:"
horizontal_alignment = 1

[node name="NameEntry" type="LineEdit" parent="VBoxContainer/HighScoreContainer"]
layout_mode = 2
placeholder_text = "Your name here..."
max_length = 20
alignment = 1

[node name="ValidationMessage" type="Label" parent="VBoxContainer/HighScoreContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)

[node name="CharacterCount" type="Label" parent="VBoxContainer/HighScoreContainer"]
layout_mode = 2
text = "0/20 characters"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer/HighScoreContainer"]
layout_mode = 2
alignment = 1

[node name="SubmitNameButton" type="Button" parent="VBoxContainer/HighScoreContainer/ButtonContainer"]
layout_mode = 2
text = "Submit Score"
disabled = false

[node name="SkipButton" type="Button" parent="VBoxContainer/HighScoreContainer/ButtonContainer"]
layout_mode = 2
text = "Skip"
